# Kraken

./: README.md
go-server/: go.mod
go-server/cmd/server/: main.go
go-server/internal/config/: config.go
go-server/internal/crypto/: rust_wrapper.go
go-server/internal/storage/: storage.go
rust-crypto-module/: Cargo.toml
rust-crypto-module/src/: checksum.rs  encryption.rs  ffi.rs  lib.rs
