[package]
name = "secure_transfer_crypto"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Encryption and checksum module for secure file transfer system"

[lib]
name = "secure_transfer_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cryptography
aes-gcm = "0.10.1"
sha2 = "0.10.6"
blake3 = "1.3.3"
argon2 = "0.4.1"
rand = "0.8.5"
base64 = "0.13.0"

# Error handling
thiserror = "1.0.38"

# FFI support
libc = "0.2.139"

# CLI (for standalone usage)
clap = { version = "4.1.4", features = ["derive"], optional = true }

# Serialization
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.4.0"
tempfile = "3.3.0"

[features]
default = []
cli = ["clap"]

[[bin]]
name = "secure_transfer_crypto_cli"
path = "src/cli.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"